add API Email Approval Admin using Template
